--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -5,9 +5,11 @@
         <attr name="wheel_size" format="integer" />
         <attr name="pointer_size" format="integer" />
         <attr name="max" format="integer"></attr>
+        <attr name="min" format="integer"></attr>
         <attr name="show_text" format="boolean"></attr>
         <attr name="start_angle" format="integer"></attr>
         <attr name="end_angle" format="integer"></attr>
+        <attr name="rotate_angle" format="integer"></attr>
         <attr name="text_size" format="integer"></attr>
         <attr name="init_position" format="integer"></attr>
         <attr name="color" format="string"></attr>
