--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -6,6 +6,7 @@
         <attr name="max" format="integer"></attr>
         <attr name="min" format="integer"></attr>
         <attr name="show_text" format="boolean"></attr>
+        <attr name="text_suffix" format="string"></attr>
         <attr name="start_angle" format="integer"></attr>
         <attr name="end_angle" format="integer"></attr>
         <attr name="rotate_angle" format="integer"></attr>
